# VideoScaler

./: CMakeLists.txt  README.md  compile.sh
include/: FrameScaler.hpp  ScalerUtils.hpp  VideoProcessor.hpp  VideoReader.hpp  VideoWriter.hpp
src/: FrameScaler.cpp  VideoProcessor.cpp  VideoReader.cpp  VideoWriter.cpp  main.cpp
